# anybase

./: .gitignore  Cargo.toml  README  README.md
benches/: my_benchmark.rs
src/: big_int.rs  converter.rs  core.rs  lib.rs  main.rs
tests/: bulk_test.rs  edge_case_test.rs  non_ascii_test.rs
