[package]
name = "anybase"
version = "0.2.1"
edition = "2024"
authors = ["Entlst <volyyig@gmail.com>"]
description = "High-performance arbitrary base integer conversion library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Volyyig/anybase"
keywords = ["base-conversion", "arbitrary-precision", "math"]
categories = ["algorithms", "encoding"]

[dependencies]

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "my_benchmark"
harness = false
